tests/semantic/valid/78_i9_method_param_via_call.hulk
type C {
    helper(x: Number) => x;
    outer(y) => self.helper(y);
}
let c = new C() in print(c.outer(1));
