tests/semantic/invalid/40_e_self_assign.hulk
type Point(x:Number) {
    x:Number = x;
    bad() => self := new Point(1.0);
}
print(0);
